cluster/kubernetes/apps/renovate/renovate-operator/app/networkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-operator
spec:
  endpointSelector:
    matchLabels:
      app: renovate-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: envoy
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: '8081'
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/instance: kube-prometheus-stack
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchName: github.com
        - matchName: api.github.com
        - matchPattern: '*.github.com'
